# identifyingortholoxo

./: CONFIG  Makefile  README.md  build_json_parquet.py  compute_stats.py  detect_classic.py  detect_longest.py  download_data.py  explore6.ipynb  figures.py  filter_trajs.py  geosphere.py  piecewise.py  process_airac.py  pyproject.toml  read_json.py  timetrack.py
outfiles/: detectedref.parquet
outfiles/detected_alpha_mean_slope_3600_0.01_0.5_0.1_0.001_0.1_0/: 2022-07-15.parquet  2022-07-16.parquet  2022-07-17.parquet  2022-07-18.parquet  2022-07-19.parquet  2022-07-20.parquet  2022-07-21.parquet  2022-07-22.parquet  2022-07-23.parquet  2022-07-24.parquet  2022-07-25.parquet  2022-07-26.parquet  2022-07-27.parquet  2022-07-28.parquet  2022-07-29.parquet  2022-07-30.parquet  2022-07-31.parquet  2022-08-01.parquet  2022-08-02.parquet  2022-08-03.parquet  2022-08-04.parquet  2022-08-05.parquet  2022-08-06.parquet  2022-08-07.parquet  2022-08-08.parquet  2022-08-09.parquet  2022-08-10.parquet
outfiles/detectedref_alpha_mean_slope_3600_0.01_1_200_0.1_0.1/: 2022-07-15.parquet  2022-07-16.parquet  2022-07-17.parquet  2022-07-18.parquet  2022-07-19.parquet  2022-07-20.parquet  2022-07-21.parquet  2022-07-22.parquet  2022-07-23.parquet  2022-07-24.parquet  2022-07-25.parquet  2022-07-26.parquet  2022-07-27.parquet  2022-07-28.parquet  2022-07-29.parquet  2022-07-30.parquet  2022-07-31.parquet  2022-08-01.parquet  2022-08-02.parquet  2022-08-03.parquet  2022-08-04.parquet  2022-08-05.parquet  2022-08-06.parquet  2022-08-07.parquet  2022-08-08.parquet  2022-08-09.parquet  (+1 more)
(+1 files in other folders)
